version: "rml-0.0.06-653-gc4043f8-dirty"
opam-version: "0.0.1"
maintainer: "samuel vivien <samuel.vivien@ens.psl.eu>"
authors: [ "Louis Mandel <fhuf@fzrfzr.org>" ]
license: "MIT"
dev-repo: "git+https://github.com/samsa1/ppx_rml.git"
tags: [ "syntax" ]
build: [
  ["./configure" "--prefix" "%{prefix}%"]
  [make "-j" jobs]
  ["dune" "runtest" "-j" jobs] {with-test}
]

install: [
  ["dune" "install" "-j" jobs]
]

depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "1.6.3"}
  "menhir"
  "ppxlib" {>= "0.20.0"}
  "alcotest"
]
synopsis: "Reactive ML"
description: """
ReactiveML ppx version
"""