(rule (target await2.ml) (deps (file await2.rml)) (action (run ../compiler/rmlc.exe await2.rml)))

(executable
 (name pp)
 (promote (until-clean))
 (flags (:standard -rectypes))
 (libraries ppx_rml ppxlib rmllib)
 (modules pp))

(executable
 (name darwin)
 (promote (until-clean))
 (flags (:standard -rectypes))
 (libraries rmllib graphics)
 (preprocess (pps ppx_rml))
 (modules darwin))

(executable
 (name compare_perf)
 (promote (until-clean))
 (flags (:standard -rectypes))
 (libraries rmllib)
 (preprocess (pps ppx_rml))
 (modules compare_perf))

(test
 (name test)
 (libraries alcotest rmllib)
 (flags (:standard -rectypes))
 (preprocess (pps ppx_rml))
 (modules (:standard \ pp darwin compare_perf)))